# middleman

./: .air.toml  .air.windows.toml  .gitattributes  .gitignore  .golangci.yml  .kata.toml  .pc_env  .roborev.toml  CLAUDE.md  Cargo.toml  Dockerfile.dev  LICENSE  Makefile  PRODUCT.md  README.md  compose.yml  compose_test.go  config.example.toml  docker-bake.hcl  docker-compose.dev.yml  favicon-deco-preview.html  go.mod  go.sum  middleman.go  middleman_test.go  mise.toml  package.json  prek.toml  process-compose.yml  screenshot_favicon.html  sqlc.yaml
context/: api-projection.md  db-migrations.md  embeds.md  github-sync-invariants.md  inline-diff-review-comments-plan.md  mobile-ux.md  notification-inbox.md  platform-sync-invariants.md  provider-architecture.md  repository-identity.md  retries-and-backoffs.md  testing.md  ui-design-system.md  ui-interaction-contracts.md  workspace-apis.md  workspace-runtime-lifecycle.md
docker/: backend-dev-entrypoint.sh  dev-config.toml  frontend-dev-entrypoint.sh
docs/: svelte-skills-migration.md  sync-engine.md
frontend/: eslint.config.mjs  index.html  package-lock.json  package.json  playwright-e2e.config.ts  playwright.config.ts  tsconfig.json  vite.config.ts
rust/pty-manager/: Cargo.toml
rust/pty-manager/src/: main.rs
scripts/: check-font-size-tokens.test.ts  check-font-size-tokens.ts  check-migration-history.sh  dev-backend-build.sh  dev-backend-build.test.mjs  dev-clone-db.sh  dev-clone-db.test.mjs  dev-stack-backend.sh  dev-stack-frontend.sh  frontend-dev.sh  lint-api-urls.mjs  lint-api-urls.test.mjs  run-roborev-e2e.sh  (+3 more)
(+778 files in other folders)
